--- a/index.html
+++ b/index.html
@@ -405,11 +405,9 @@
 
     <!-- Footer Section -->
     <footer class="bg-dark text-center text-light p-4">
-      <div class="row container m-auto">
-        <div class="col-12 col-sm-6">
-          <h2 class="subtitle display-4 fw-bold text-center my-4">Mis Redes</h2>
-        </div>
-        <div class="col-12 col-sm-6 mt-4 mt-sm-0">
+      <div class="container">
+        <p class="subtitle display-4 fw-bold text-center my-4">Mis Redes</p>
+        <div class="container">
           <i class="fab fa-github-square fa-3x mx-2"></i>
           <i class="fab fa-linkedin fa-3x mx-2"></i>
           <i class="fab fa-instagram-square fa-3x mx-2"></i>
